# ticket-ai-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agent.py  context.py  db.py  server.py  tools.py
app/models/: base.py  ticket_model.py
app/schemas/: ticket_schemas.py
app/tools/: ticket_tool.py
